webroot/public/static/dev/scss/components/_grid.scss
/* Grid */
.grid {
    display: block;
    margin-left: -$spacing-unit;
    letter-spacing: -0.31em; /* webkit */
    *letter-spacing: normal; /* reset IE < 8 */
    word-spacing: -0.43em; /* IE < 8 && gecko */
}
.grid:before,
.grid:after {
  display: table;
  line-height: 0;
  content: "";
}

.grid:after {
  clear: both;
}
.g {
    display: inline-block;
    vertical-align: top;
    width: 100%;
    letter-spacing: normal;
    word-spacing: normal;
    padding-top: $spacing-unit;
}
.g-1-1 { width: 100%;}
.g-1-2 { width: 50%;}
.g-1-3 { width: 33.33333333333333%;}
.g-2-3 { width: 66.66666666666667%;}
.g-1-4 { width: 25%;}
.g-3-4 { width: 75%;}
.g-1-6 { width: 16.66666666666667%;}

@media all and (min-width: pxtoem(320)) { /* 320px */
  .g-xs-1-1 { width: 100%;}
  .g-xs-1-2 { width: 50%;}
  .g-xs-1-3 { width: 33.33333333333333%;}
  .g-xs-2-3 { width: 66.66666666666667%;}
  .g-xs-1-4 { width: 25%;}
  .g-xs-3-4 { width: 75%;}
  .g-xs-1-6 { width: 16.66666666666667%;}
}

@media all and (min-width: pxtoem(480)) { /* 480px */
  .g-s-1-1 { width: 100%;}
  .g-s-1-2 { width: 50%;}
  .g-s-1-3 { width: 33.33333333333333%;}
  .g-s-2-3 { width: 66.66666666666667%;}
  .g-s-1-4 { width: 25%;}
  .g-s-3-4 { width: 75%;}
  .g-s-1-6 { width: 16.66666666666667%;}
}

@media all and (min-width: pxtoem(600)) { /* 600px */
  .g-m-1-1 { width: 100%;}
  .g-m-1-2 { width: 50%;}
  .g-m-1-3 { width: 33.33333333333333%;}
  .g-m-2-3 { width: 66.66666666666667%;}
  .g-m-1-4 { width: 25%;}
  .g-m-3-4 { width: 75%;}
  .g-m-1-6 { width: 16.66666666666667%;}
}

@media all and (min-width: pxtoem(768)) { /* 768px */
  .g-l-1-1 { width: 100%;}
  .g-l-1-2 { width: 50%;}
  .g-l-1-3 { width: 33.33333333333333%;}
  .g-l-2-3 { width: 66.66666666666667%;}
  .g-l-1-4 { width: 25%;}
  .g-l-3-4 { width: 75%;}
  .g-l-1-6 { width: 16.66666666666667%;}
}

@media all and (min-width: pxtoem(976)) { /* 976px */
  body {
    width: 976px;
    margin:0 auto;
  }
  .g-xl-1-1 { width: 100%;}
  .g-xl-1-2 { width: 50%;}
  .g-xl-1-3 { width: 33.33333333333333%;}
  .g-xl-2-3 { width: 66.66666666666667%;}
  .g-xl-1-4 { width: 25%;}
  .g-xl-3-4 { width: 75%;}
  .g-xl-1-6 { width: 16.66666666666667%;}
}

